Fix extra spacing

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ header {
   text-align: center;
   padding: 10px 5px 15px 5px;
   position: relative;
+  padding: 10px 0 4px;
 }
 
 * {
@@ -110,13 +111,6 @@ header {
 
 .logo {
   max-width: 50px;
-}
-
-nav {
-  display: inline-block;
-  width: 100%;
-  font-size: 14px;
-  line-height: 5;
 }
 
 nav > ul {
@@ -143,7 +137,6 @@ nav > ul > li > a:active {
 
 #hero {
   background-color: #FFFFFF;
-  padding: 20px 0;
   display: inline-block;
   width: 100%;
 }
@@ -156,7 +149,7 @@ nav > ul > li > a:active {
 }
 
 main {
-  padding-top: 133px;
+  padding-top: 56px;
 }
 
 footer {
@@ -258,6 +251,19 @@ svg {
   display: none;
 }
 
+/* position menu icon right and align with logo */
+.navtoggle, .navtoggle.responsive {
+  position: relative;
+}
+
+.navtoggle li .icon {
+  position: absolute;
+  right: 0;
+  top: 2px;
+  font-size: 20px;
+  padding-right: 0;
+}
+
 /* medium screens */
 @media only screen and (min-width: 640px) {
   header {
@@ -269,6 +275,10 @@ svg {
     width: auto;
     float: right;
     margin-top: 4px;
+  }
+
+  nav > ul {
+     margin: 1em 0;
   }
 
   main {
@@ -332,6 +342,10 @@ svg {
     width: auto;
     float: right;
     margin-top: 4px;
+  }
+
+  nav > ul {
+     margin: 1em 0;
   }
 
   main {
